kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas-xyz.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  hostnames:
    - hubble.serek.xyz
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
